# RenderBase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  buildUtils.lua  libUtils.lua  premake5.lua
Demos/: CMakeLists.txt  premake5.lua
Demos/HelloTiangle/: main.cpp
Demos/HelloTriangle/: CMakeLists.txt  lib.cpp  main.cpp  premake5.lua
Demos/HelloTriangle/src/: HelloTriangle.cpp
RenderBase/: CMakeLists.txt  premake5.lua
RenderBase/src/RenderBase/: FailableObject.cpp  FailableObject.h  application.cpp  application.h  asserts.h  constants.h  defaults.h  defines.h  event.h  events.cpp  events.h  graphics.h  gui.cpp  gui.h  input.cpp  input.h  logging.cpp  logging.h  performance.cpp  performance.h  rb.cpp  rb.h  rbapp.h  timing.cpp  timing.h  window.cpp  window.h
RenderBase/src/RenderBase/core/: asserts.h  logging.cpp  logging.h  platform.h
RenderBase/src/RenderBase/ds/: Pool.h
RenderBase/src/RenderBase/gl/: BaseGL.cpp  BaseGL.h  BaseGLObject.cpp  BaseGLObject.h  Buffer.cpp  Buffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  SparseTexture3D.cpp  SparseTexture3D.h  Texture3D.cpp  Texture3D.h  VertexArray.cpp  VertexArray.h  context.h  gl.h
RenderBase/src/RenderBase/graphics/: Buffer.cpp  Buffer.h  GraphicsBaseObject.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsObject.cpp  GraphicsObject.h  Program.cpp  Program.h  Shader.cpp  Shader.h
RenderBase/src/RenderBase/platform/: glfw3.cpp  glfw3.h  graphicsPlatform.h  linux.cpp  platform.cpp  platform.h  platformGraphics.h  platformWindow.cpp  platformWindow.h  sdl.cpp  sdl.h  windows.cpp
RenderBase/src/RenderBase/platform/graphics/OpenGL/: BaseGLObject.h  Buffer.cpp  Buffer.h  GLGraphicsContext.cpp  GLGraphicsContext.h  Program.cpp  Program.h  Shader.cpp  Shader.h
RenderBase/src/RenderBase/platform/window/GLFW/: glfw.cpp  glfw.h
RenderBase/src/RenderBase/platform/window/SDL2/: sdl.cpp  sdl.h
RenderBase/src/RenderBase/tools/: camera.cpp  camera.h  entryPoint.h  logging.h  random.cpp  random.h  util.cpp  util.h  utils.cpp  utils.h
Sandbox/: CMakeLists.txt  application.cpp  application.h  main.cpp  premake5.lua
cmakeUtils/: ListUtils.cmake  LoadResourceFiles.cmake  LoadSharedFiles.cmake
src/: main.cpp
src/RenderBase/: application.cpp  application.h  event.h  graphics.cpp  graphics.h  logging.h  rb.h  scene.h  window.cpp  window.h
src/RenderBase/core/: application.cpp  application.h  event.h  graphics.cpp  graphics.h  performance.cpp  performance.h  window.cpp  window.h
src/RenderBase/core/graphics/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h
src/RenderBase/platform/: platform.cpp  platform.h  sdl.cpp  sdl.h
src/RenderBase/tools/: camera.cpp  camera.h  logging.h  macroUtils.h  utils.cpp  utils.h
src/engine/: application.cpp  application.h  engine.h  event.h  graphics.cpp  graphics.h  scene.h  window.cpp  window.h
src/engine/platform/: platform.cpp  platform.h  sdl.cpp  sdl.h
src/rb/: application.cpp  graphics.h
src/rb/platform/: platform.cpp
